# nethxeum-gui

./: .gitignore  .gitmodules  CMakeLists.txt  DEPLOY.md  Dockerfile.android  Dockerfile.windows  LICENSE  LeftPanel.qml  MiddlePanel.qml  README.md  main.qml  qml.qrc  start-low-graphics-mode.bat
.github/: verify_p2pool.py
.github/workflows/: build.yml  flatpak.yml
build_genesis/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  genesis_params.txt
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  Deploy.cmake  VersionGui.cmake
components/: AdvancedOptionsItem.qml  CheckBox.qml  CheckBox2.qml  ContextMenu.qml  ContextMenuItem.qml  DaemonManagerDialog.qml  DatePicker.qml  DevicePassphraseDialog.qml  Dialog.qml  IconButton.qml  InlineButton.qml  Input.qml  InputDialog.qml  InputMulti.qml  Label.qml  LabelButton.qml  LabelSubheader.qml  LanguageButton.qml  LanguageSidebar.qml  LineEdit.qml  LineEditMulti.qml  MenuBar.qml  MenuButton.qml  MenuButtonDivider.qml  Navbar.qml  NetworkStatusItem.qml  PasswordDialog.qml  ProcessingSplash.qml  ProgressBar.qml  QRCodeScanner.qml  RadioButton.qml  RemoteNodeDialog.qml  RemoteNodeEdit.qml  RemoteNodeList.qml  SettingsListItem.qml  Slider.qml  StandardButton.qml  StandardDialog.qml  StandardDropdown.qml  Style.qml  (+10 more)
components/effects/: ColorTransition.qml  GradientBackground.qml  ImageMask.qml
fonts/FontAwesome/: FontAwesome.qml
installers/windows/: -daemon.bat  Deterministic.md  Nethxeum.iss  README.md  ReadMe.htm
js/: Wizard.js
monero/src/common/: updates.cpp
nethxeum/: .gitignore  CMakeLists.txt  CMakeLists_IOS.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md
nethxeum/cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  CheckLinkerFlag.cmake  Doxyfile.in  FindCcache.cmake  FindUnbound.cmake  GitVersion.cmake  SetClangTidy.cmake  Version.cmake  test-protobuf.cpp  test-static-assert.cpp
nethxeum/contrib/: CMakeLists.txt
nethxeum/contrib/brew/: Brewfile
nethxeum/contrib/depends/: Makefile  README.md
nethxeum/contrib/epee/: CMakeLists.txt
nethxeum/contrib/gitian/: DOCKRUN.md  README.md  dockrun.sh  gitian-android.yml  (+5 more)
nethxeum/docs/: ANONYMITY_NETWORKS.md  COMPILING_DEBUGGING_TESTING.md  CONTRIBUTING.md  LEVIN_PROTOCOL.md  PORTABLE_STORAGE.md  README.i18n.md  RELEASE_CHECKLIST.md  ZMQ.md  proxies.md
nethxeum/nethxeum_genesis/: CMakeLists.txt  README.md  genesis_generator.cpp  genesis_generator.h  randomx_wrapper.cpp  randomx_wrapper.h  tx_builder.cpp  tx_builder.h
nethxeum/src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
nethxeum/tests/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h.in  create_test_disks.sh  hash-target.cpp  io.h
nethxeum/translations/: CMakeLists.txt  generate_translations_header.c  nethxeum_ar.ts  nethxeum_de.ts  nethxeum_el.ts  nethxeum_es.ts  nethxeum_fr.ts  nethxeum_hi.ts  nethxeum_is.ts  nethxeum_it.ts  nethxeum_ja.ts  nethxeum_nb_NO.ts  nethxeum_ne.ts  nethxeum_nl.ts  nethxeum_pl.ts  nethxeum_prt.ts  nethxeum_pt-br.ts  nethxeum_sk.ts  nethxeum_sv.ts  nethxeum_tr.ts  nethxeum_zh-cn.ts  nethxeum_zu.ts
nethxeum/utils/: doxygen-publish.sh
pages/: Account.qml  AddressBook.qml  Advanced.qml  History.qml  Keys.qml  Mining.qml  Receive.qml  SharedRingDB.qml  Sign.qml  Transfer.qml  TxKey.qml
pages/merchant/: Merchant.qml  MerchantCheckbox.qml  MerchantTitlebar.qml  MerchantTrackingList.qml
pages/settings/: Settings.qml  SettingsInfo.qml  SettingsLayout.qml  SettingsLog.qml  SettingsNode.qml  SettingsWallet.qml
share/: Info.plist  org.getnethxeum.Nethxeum.desktop  org.getnethxeum.Nethxeum.metainfo.xml  org.getnethxeum.Nethxeum.yaml
src/: CMakeLists.txt  NetworkType.h  TranslationManager.cpp
src/daemon/: DaemonManager.cpp  DaemonManager.h
src/libwalletqt/: AddressBook.cpp  AddressBook.h  PassphraseHelper.cpp  PassphraseHelper.h  PendingTransaction.cpp  PendingTransaction.h  Subaddress.cpp  Subaddress.h  SubaddressAccount.cpp  SubaddressAccount.h  TransactionHistory.cpp  TransactionHistory.h  TransactionInfo.cpp  TransactionInfo.h  UnsignedTransaction.cpp  UnsignedTransaction.h  Wallet.cpp  Wallet.h  WalletListenerImpl.cpp  WalletListenerImpl.h  WalletManager.cpp  WalletManager.h
src/main/: Logger.cpp  clipboardAdapter.cpp  filter.cpp  main.cpp  oshelper.cpp
src/model/: AddressBookModel.cpp  SubaddressAccountModel.cpp  SubaddressModel.cpp
src/openpgp/: CMakeLists.txt
src/qt/: FutureScheduler.cpp  KeysFiles.cpp  KeysFiles.h  TailsOS.cpp  ipc.cpp  ipc.h  nethxeumSettings.cpp  nethxeumSettings.h  network.cpp  network.h  updater.cpp  utils.cpp
translations/: CMakeLists.txt  nethxeum-core.ts  nethxeum-core_af.ts  nethxeum-core_ar.ts  nethxeum-core_az.ts  nethxeum-core_bg.ts  nethxeum-core_bn.ts  nethxeum-core_cat.ts  nethxeum-core_cs.ts  nethxeum-core_da.ts  nethxeum-core_de.ts  nethxeum-core_el.ts  nethxeum-core_eo.ts  nethxeum-core_es.ts  nethxeum-core_fa.ts  nethxeum-core_fi.ts  nethxeum-core_fr.ts  nethxeum-core_ga.ts  nethxeum-core_he.ts  nethxeum-core_hi.ts  nethxeum-core_hr.ts  nethxeum-core_hu.ts  nethxeum-core_id.ts  nethxeum-core_is.ts  nethxeum-core_it.ts  nethxeum-core_ja.ts  nethxeum-core_kmr.ts  nethxeum-core_ko.ts  nethxeum-core_lt.ts  nethxeum-core_nb.ts  nethxeum-core_ne.ts  nethxeum-core_nl.ts  nethxeum-core_pl.ts  nethxeum-core_pt-br.ts  nethxeum-core_pt-pt.ts  nethxeum-core_ro.ts  nethxeum-core_ru.ts  nethxeum-core_sk.ts  nethxeum-core_sl.ts  nethxeum-core_sr.ts  (+10 more)
wizard/: SeedListGrid.qml  SeedListItem.qml  WizardAskPassword.qml  WizardController.qml  WizardCreateDevice1.qml  WizardCreateWallet1.qml  WizardCreateWallet2.qml  WizardCreateWallet3.qml  WizardCreateWallet4.qml  WizardCreateWallet5.qml  WizardDaemonSettings.qml  WizardHeader.qml  WizardHome.qml  WizardLanguage.qml  WizardMenuItem.qml  WizardModeBootstrap.qml  WizardModeRemoteNodeWarning.qml  WizardModeSelection.qml  WizardNav.qml  WizardOpenWallet1.qml  WizardRestoreWallet1.qml  WizardRestoreWallet2.qml  WizardRestoreWallet3.qml  WizardRestoreWallet4.qml  WizardSummary.qml  WizardSummaryItem.qml  WizardWalletInput.qml
(+678 files in other folders)
